--- a/src/main/webapp/css/styles-home-connecter.css
+++ b/src/main/webapp/css/styles-home-connecter.css
@@ -1,10 +1,54 @@
+.bordertest {
+  border: solid 1px red;
+  }
 
 *{
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
+  font-family: 'Advent Pro', sans-serif;
 
   }
+
+.flexer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding-top: 3%;
+  padding-bottom: 3%;
+  
+}
+
+.recherche-sup1 {
+  margin-right: 15%;
+}
+
+.button-rad1 {
+  color: rgba(255, 255, 255, 0.863);
+  
+}
+
+.modiful ul li {
+  list-style: none;
+  margin-top: 10%;
+  color: rgba(255, 255, 255, 0.863);
+  font-size: 25px;
+}
+
+.ajust {
+  margin-top: 11%;
+}
+
+
+.categories1 {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 5%;
+  font-size: 60px;
+  font-family: 'Advent Pro', sans-serif;
+  margin-right: 10%;
+}
 
   a {
 	text-decoration: none;
@@ -21,12 +65,17 @@ h1 {
     color: rgba(255, 255, 255, 0.863);
 }
 
+.margingR {
+  margin-right: 70px;
+}
+
 .titre {
     display: flex;
     justify-content: center;
     margin-top: 60px;
     font-family: 'Advent Pro', sans-serif;
     font-size:  60px;
+    padding-bottom: 5%;
 
 }
 
@@ -43,6 +92,53 @@ h1 {
     margin-top: 20px;
     border-radius: 30%;
     box-shadow: rgba(255, 255, 255, 0.4) 0px 0px 0px 2px, rgba(6, 24, 44, 0.65) 0px 4px 6px -1px, rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
+}
+
+.testarticle {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: #ffffff 1px solid;
+  height: 325px;
+  width: 31%;
+  margin: auto;
+  margin-top: 60px;
+  border-radius: 50px;
+
+}
+
+.testarticle:hover {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: #ffffff 1px solid;
+  height: 325px;
+  width: 32%;
+  margin: auto;
+  margin-top: 60px;
+  border-radius: 50px;
+  box-shadow: rgba(255, 255, 255, 0.4) 0px 0px 0px 2px, rgba(6, 24, 44, 0.65) 0px 4px 6px -1px, rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
+  cursor: pointer;
+}
+
+.box1 {
+  display: flex;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+}
+.box2 {
+  display: flex;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+}
+.box3 {
+  display: flex;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 5%;
 }
 
 /* NAVBAR */
@@ -178,11 +274,13 @@ h1 {
   
 
   @media screen and (max-width: 767px) {
-	body {
+	
+    body {
     width: 96vw;
+    font-family: 'Advent Pro', sans-serif;
   }
 
-.dark {
+  .dark {
     background-color: #121212;
 }
 
@@ -191,7 +289,7 @@ h1 {
         justify-content: space-evenly;
         list-style: none;
         width: 99%;
-        align-items: center;                                                                                ;
+        align-items: center;                                                                             ;
     }
 
     .titre {
@@ -258,9 +356,9 @@ h1 {
     /* BARE DE RECHERCHE x mobile */
 
     .search-box{
-        width: 100%;
+        width: 95%;
         display: flex;
-        margin-left: 50%;
+        margin-left: 52%;
       }
 
 
@@ -298,12 +396,6 @@ h1 {
         transform: translate(-50% , -50%);
       }
 
-      .bordertest {
-        border: red solid 1px;
-      }
-
-
-
 
 
       /* BOUTON DE CATEGORIE */
@@ -313,6 +405,16 @@ h1 {
 
 
       }
+
+       .ajust-input1 {
+        margin-left: 22px;
+       }
+
+       
+       .ajust-input2 {
+        margin-left: 18px;
+       }
+
       .button-rad {
         color: rgba(255, 255, 255, 0.863);
       }
@@ -360,6 +462,34 @@ h1 {
         border-radius: 50px;
         box-shadow: rgba(255, 255, 255, 0.4) 0px 0px 0px 2px, rgba(6, 24, 44, 0.65) 0px 4px 6px -1px, rgba(255, 255, 255, 0.08) 0px 1px 0px inset;
         cursor: pointer;
+      }
+
+      .modiful-mobile ul li {
+        list-style: none;
+        margin-top: 5%;
+        color: rgba(255, 255, 255, 0.863);
+        font-size: 20px;
+        margin-left: 10%;
+      }
+      .box1-mobile {
+        flex-direction: column;
+      }
+      .box2-mobile {
+        flex-direction: column;
+      }
+      .box3-mobile {
+        flex-direction: column;
+        margin-bottom: 5%;
+      }
+
+      .column {
+        display: flex;
+        flex-direction: column;
+      }
+
+      .size-mobile {
+      margin: auto;
+      width: 450px;
       }
     
 }
