--- a/src/main/webapp/css/styles-modifier-profil.css
+++ b/src/main/webapp/css/styles-modifier-profil.css
@@ -102,7 +102,7 @@ input[type=text], input[type=password] {
   
   .cancelbtn, .signupbtn {
     float: left;
-    width: 32%;
+    width: 34%;
     height: 60px;
     margin-right: 4px;
   }
@@ -119,7 +119,12 @@ input[type=text], input[type=password] {
     display: table;
   }
   
-  
+  .clear-center {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-top: 6%;
+  }
 
 }
   
