mis a jour final

--- a/src/main/webapp/css/styles-page-profil.css
+++ b/src/main/webapp/css/styles-page-profil.css
@@ -1,45 +1,279 @@
-@charset "UTF-8";
+@media screen and (min-width: 1200px)  {
 
-* {
-	box-sizing: border-box; 
-}
-
-body{
-	font-family: arial, helvetica, sans-serif; 
-  background-color: #222;
-  color: rgba(255, 255, 255, 0.863);
-}
-
-button {
-    background-color: #04AA6D;
-    color: white;
-    padding: 14px 20px;
-    margin: 8px 0;
-    border: none;
-    cursor: pointer;
-    width: 35%;
-    opacity: 0.9;
-    padding-left : 50px;
-    margin-left : 200px;
+    body{
+        font-family: arial, helvetica, sans-serif; 
+      background-color: #222;
+      color: rgba(255, 255, 255, 0.863);
+    }
     
-  }
-  
-  button:hover {
-    opacity:1;
-  }
-  
- p {
- 	text-align : center;
- }
- 
- h1 {
-	text-align : center; 
- }
- 
- .paragraphes {
- 	border-top : 1px solid #FFFFFF;
- }
- 
- .return{
- 	background-color : #f44336;
- }
+    .white {
+      color: white;
+    }
+     
+    
+    body, h1, h2, h3, p, figure {
+        margin: 0;
+    }
+    
+     
+    
+    * {
+        box-sizing: border-box; 
+    }
+    
+     
+    
+    .paddingtop {
+        padding-top: 2%;
+    }
+    
+     
+    
+    .margt {
+        margin-top: 5%;
+    }
+    
+     
+    
+    .droite {
+      width: 45%;
+      margin-top: 5%;
+
+    }
+
+    .gauche {
+      width: 45%;
+      margin-top: 5%;
+      margin-right: 9%;
+    }
+    .center {
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    padding-top: 100px;
+    }
+    
+    .flexer input {
+      justify-content: center;
+      text-align: center;
+      align-items: center;
+      margin-top: 1%;
+     }
+    
+    .flexer {
+      display: flex;
+    }
+    
+     
+    
+    .bordertest {
+      border: red solid 3px;
+    }
+    
+     
+    
+    input[type=text], input[type=password] {
+        width: 100%;
+        padding: 15px;
+        margin: 5px 0 22px 0;
+        display: inline-block;
+        border: none;
+        height: 10px;
+        background-color: #222;
+      }
+    
+     
+    
+      
+      input[type=text]:focus, input[type=password]:focus {
+       background-color: #222;
+        outline: none;
+      }
+    
+      hr {
+        border: 1px solid #f1f1f1;
+        margin-bottom: 25px;
+      }
+    
+     
+    
+      .hr2 {
+          width: 3px;
+          height: 90%;
+      }
+    
+      .dif {
+         width: 20%; 
+      }
+    
+     
+    
+      button {
+        background-color: #04AA6D;
+        color: white;
+        padding: 14px 20px;
+        margin: 8px 0;
+        border: none;
+        cursor: pointer;
+        width: 100%;
+        opacity: 0.9;
+      }
+    
+      button:hover {
+        opacity:1;
+      }
+    
+      .cancelbtn {
+        padding: 14px 20px;
+        background-color: #ffd000b2;
+      }
+    
+     
+    
+      .warning {
+        background-color: #f44336;
+      }
+    
+      .cancelbtn, .signupbtn {
+        float: left;
+        width: 50%;
+        height: 60px;
+        margin-right: 4px;
+      }
+    
+      .center-btn {
+        display: flex;
+        margin-top: 5%;
+      }
+     
+    
+      .sign {
+        padding: 16px;
+        width: 1000px;
+      }
+    
+      .clearfix::after {
+        content: "";
+        clear: both;
+        display: table;
+      }
+    
+    
+     
+    
+    }
+    
+     
+    
+      @media screen and (max-width: 1200px) {
+    
+        body {
+          background-color: #222;
+          color: rgba(255, 255, 255, 0.863);
+        }
+    
+        .cancelbtn, .signupbtn {
+          width: 100%
+        }
+        body{
+          font-family: arial, helvetica, sans-serif; 
+        }
+    
+        body, h1, h2, h3, p, figure {
+          margin: 0;
+        }
+    
+        * {
+          box-sizing: border-box; 
+        }
+    
+        .paddingtop {
+            padding-top: 2%;
+        }
+    
+        .center {
+        display: flex;
+        justify-content: center;
+        }
+    
+    
+        .bordertest {
+          border: red solid 3px;
+        }
+    
+        input[type=text], input[type=password] {
+            width: 100%;
+            padding: 15px;
+            margin: 5px 0 22px 0;
+            display: inline-block;
+            border: none;
+            background: #f1f1f1;
+          }
+    
+          input[type=text]:focus, input[type=password]:focus {
+            background-color: #ddd;
+            outline: none;
+          }
+    
+          hr {
+            border: 1px solid #f1f1f1;
+            margin-bottom: 25px;
+          }
+    
+    
+          button {
+            background-color: #04AA6D;
+            color: white;
+            padding: 14px 20px;
+            margin: 8px 0;
+            border: none;
+            cursor: pointer;
+            width: 100%;
+            opacity: 0.9;
+          }
+    
+          button:hover {
+            opacity:1;
+          }
+    
+          .cancelbtn {
+            padding: 14px 20px;
+            background-color: #ffd000b2;
+          }
+    
+     
+    
+          .warning {
+            background-color: #f44336;
+          }
+    
+          .cancelbtn, .signupbtn {
+            float: left;
+            width: 32%;
+            height: 60px;
+            margin-right: 4px;
+            padding-left: 5%;
+          }
+            .ajust1 {
+                margin-left: 5px;
+            }
+    
+          .sign {
+            padding: 16px;
+          }
+    
+          .clearfix::after {
+            content: "";
+            clear: both;
+            display: table;
+          }
+    
+     
+    
+          
+    
+     
+    
+      
+    
+      }
